--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- ===== BOXICONS ===== -->
-        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-        
+        <link rel="stylesheet" href="assets/css/boxicons.min.css">
+
         <title>Responsive Ecommerce Website</title>
     </head>
     <body>
