--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <h2 class="section-title">OUR NEWSLETTER</h2>
                         <p class="newsletter__description">Promotion new product and sales. Directly to your</p>
 
-                        <form action="" class="newsletter__form">
+                        <form action="#" class="newsletter__form">
                             <input type="text" class="newsletter__input" placeholder="Enter your email">
                             <a href="#" class="button">SUSCRIBE</a>
                         </form>
